--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
-  - {name: 🇭🇰 香港-1.12MB/s(Youtube:不良林), server: 43.129.87.145, port: 443, type: vmess, uuid: 5bb4d785-4933-44cb-a162-d9a74625d2ee, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 43.129.87.145}}
+  - {name: 🇸🇬 新加坡-538.1KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.79MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇬🇧 英国-792.8KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-8.66MB/s(Youtube:不良林), server: hkaz4.xmrth-node.xyz, port: 15380, type: vmess, uuid: d3d11dbd-6602-33b7-a8d1-c7999b6f9b88, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz4.xmrth-node.xyz}}
-  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 13.230.223.109, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇰🇷 韩国-1.83MB/s(Youtube:不良林), server: 3.36.63.45, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-8.67MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 未知国家-894.8KB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
+  - {name: 🇰🇷 韩国-912.9KB/s(Youtube:不良林), server: 3.36.63.45, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇬🇧 英国-732.2KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-431.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 89.208.248.114, port: 443, type: vmess, uuid: ef1af6e9-2029-4d16-9fc5-c23ff022f143, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 89.208.248.114}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-538.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
       - 🇬🇧 英国-792.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 未知国家-894.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-431.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-538.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
       - 🇬🇧 英国-792.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 未知国家-894.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-431.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-538.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
       - 🇬🇧 英国-792.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 未知国家-894.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-431.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-538.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
       - 🇬🇧 英国-792.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 未知国家-894.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-431.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-538.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
       - 🇬🇧 英国-792.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 未知国家-894.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-431.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-538.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
       - 🇬🇧 英国-792.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 未知国家-894.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-431.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-538.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
       - 🇬🇧 英国-792.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.66MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
+      - 未知国家-894.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-431.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
