--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-264.7KB/s(Youtube:不良林), server: vfly5.xyz, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly5.xyz}}
-  - {name: 🇰🇷 韩国-912.9KB/s(Youtube:不良林), server: 3.36.63.45, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇫🇷 法国-1.79MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-2.85MB/s(Youtube:不良林), server: 13.230.223.109, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-8.40MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-732.2KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.18MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.99MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.66MB/s(Youtube:不良林), server: 3.36.63.45, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇸🇬 新加坡-1.29MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.56MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-199.6KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.64MB/s(Youtube:不良林), server: 89.208.248.114, port: 443, type: vmess, uuid: ef1af6e9-2029-4d16-9fc5-c23ff022f143, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 89.208.248.114}}
-  - {name: 🇸🇬 新加坡-697.6KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-491.6KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-613.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: 89.208.248.114, port: 443, type: vmess, uuid: ef1af6e9-2029-4d16-9fc5-c23ff022f143, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 89.208.248.114}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-264.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-264.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-264.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-264.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-264.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-264.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-264.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-912.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
-      - 🇬🇧 英国-732.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.99MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-199.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-976.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-697.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
