--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.94MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.29MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-491.6KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-613.0KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: 89.208.248.114, port: 443, type: vmess, uuid: ef1af6e9-2029-4d16-9fc5-c23ff022f143, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 89.208.248.114}}
+  - {name: 🇨🇳 中国-356.0KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: 13.230.223.109, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-343.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-491.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-613.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
