--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-343.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇳 中国-12.46MB/s(Youtube:不良林), server: yza2.hkbgp.wiki, port: 10353, type: ss, cipher: chacha20-ietf-poly1305, password: 1f2b603f-4400-4cb8-a12a-afe14cb641a0}
   - {name: 🇭🇰 香港-332.5KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
   - {name: 🇯🇵 日本-1006.3KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-332.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-332.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-332.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,32 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-332.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-332.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-332.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-332.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-905.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
