--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-12.13MB/s(Youtube:不良林), server: yza2.hkbgp.wiki, port: 10353, type: ss, cipher: chacha20-ietf-poly1305, password: 1f2b603f-4400-4cb8-a12a-afe14cb641a0}
   - {name: 🇰🇷 韩国-925.9KB/s(Youtube:不良林), server: hk13.nb818.xyz, port: 21890, type: vmess, uuid: 2aa5c66b-467b-40da-aae1-a994881045aa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk13.nb818.xyz}}
-  - {name: 🇯🇵 日本-1006.3KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇺🇸 美国-332.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-894.1KB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
+  - {name: 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林), server: russia.okzdns.com, port: 33306, type: trojan, password: 35a3b37b-9fb4-4b0c-91b4-2b3e738af930, sni: russia.okzdns.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-165.9KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-466.0KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-313.4KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇺🇸 美国-567.1KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇨🇳 台湾-907.9KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-359.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-925.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-894.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-567.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
       - 🇨🇳 台湾-907.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-925.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-894.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-567.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
       - 🇨🇳 台湾-907.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-925.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-894.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-567.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
       - 🇨🇳 台湾-907.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-925.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-894.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-567.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
       - 🇨🇳 台湾-907.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-925.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-894.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-567.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
       - 🇨🇳 台湾-907.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-925.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-894.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-567.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
       - 🇨🇳 台湾-907.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-12.13MB/s(Youtube:不良林)
       - 🇰🇷 韩国-925.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-894.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-506.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-466.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-567.1KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.32MB/s(Youtube:不良林)
       - 🇨🇳 台湾-907.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
